--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,4 +32,5 @@ dependencies {
     compile 'com.google.firebase:firebase-auth:11.0.2'
     testCompile 'junit:junit:4.12'
     apply plugin: 'com.google.gms.google-services'
+    compile 'com.android.support:design:25.3.1'
 }
