--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.panachainy.firebaserealtimedatabase">
+<manifest
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    package="com.example.panachainy.firebaserealtimedatabase"
+    android:installLocation="auto">
 
     <application
         android:allowBackup="true"
@@ -9,14 +11,21 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+
+        <!--<meta-data-->
+            <!--android:name="com.facebook.sdk.ApplicationId"-->
+            <!--android:value="@string/facebook_app_id"/>-->
+
         <activity android:name=".MainActivity">
+
+        </activity>
+        <activity android:name=".Login_RegisterActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".Login_RegisterActivity"></activity>
     </application>
 
 </manifest>
